more basic setup

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <title>Vimeetube</title>
   </head>
   <body>
+    <form>
+      <input type="text" class="url text">
+      <button type="submit" class="load btn">Load</button>
+    </form>
     <div id="video">
-
+      Loading ...
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/libs/youtube-api.js"></script>
+    <script src="js/libs/vimeo-api.js"></script>
+    <script src="js/libs/URI.min.js"></script>
     <script src="js/vimeetube.js"></script>
     <script src="js/index.js"></script>
   </body>
