--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <form>
       <input type="text" class="url text" value="https://vimeo.com/49384334">
       <button type="submit" class="load btn">Load</button>&nbsp;
@@ -16,11 +17,13 @@
         <button type="submit" class="goto btn">Goto</button>&nbsp;
         <input type="number" class="gotoValue">
       </span>
-
     </form>
+
     <br>
+
     <div id="video"></div>
     <br>
+
     <span class="buttonConatiner" style="display:none;">
       <button type="submit" class="currentTime btn">Current Time</button>&nbsp;
       <button type="submit" class="duration btn">Duration</button>&nbsp;
@@ -28,14 +31,16 @@
       <button type="submit" class="videoUrl btn">Video Url</button>&nbsp;
       <button type="submit" class="state btn">State</button>&nbsp;
     </span>
-    <br>
-    <textarea class="debug">
 
-    </textarea>
+    <br>
+
+    <textarea class="debug"></textarea>
+
     <ul>
       <li>Youtube: http://www.youtube.com/watch?v=4rPYPzWOr2w&feature=g-vrec</li>
       <li>Vimeo: https://vimeo.com/49384334</li>
     </ul>
+
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/libs/youtube-api.js"></script>
     <script src="js/libs/vimeo-api.js"></script>
