--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <input type="text" class="url text" value="https://vimeo.com/49384334">
       <button type="submit" class="load btn">Load</button>&nbsp;
       <span class="buttonConatiner" style="display:none;">
+        <button type="submit" class="play btn">Play</button>&nbsp;
         <button type="submit" class="stop btn">Stop</button>&nbsp;
         <button type="submit" class="pause btn">Pause</button>&nbsp;
         <button type="submit" class="toggle btn">Toggle</button>&nbsp;
@@ -21,7 +22,11 @@
 
     <br>
 
-    <div id="video"></div>
+    <div class="videoContainer">
+      <div id="video"></div>
+    </div>
+
+
     <br>
 
     <span class="buttonConatiner" style="display:none;">
