--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
 
 
-      <textarea class="debug"></textarea>
+      <textarea class="debug" style="display:none;"></textarea>
 
       <ul>
-        <li>Youtube: http://www.youtube.com/watch?v=4rPYPzWOr2w&feature=g-vrec</li>
-        <li>Vimeo: https://vimeo.com/49384334</li>
+        <li><strong>Youtube:</strong> http://www.youtube.com/watch?v=4rPYPzWOr2w&feature=g-vrec</li>
+        <li><strong>Vimeo:</strong> https://vimeo.com/49384334</li>
       </ul>
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
